made the footer no longer fixed at the bottom. Instead I added a min-height to the body pushing it to the bottom and made the content as flex 1 which would push down the footer if the content overflowed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #f4f4f4;
+    min-height: 100vh;
 }
 header {
     background-color: #84a881;
@@ -44,14 +45,17 @@ nav a.active {
     color: white;
     margin-top: -2px;
 }
+.content {
+    flex: 1;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+}
 .footer {
     background-color: #394e38;
     color: white;
     text-align: center;
     padding: 10px 0;
     width: 100%;
-    position: fixed;
-    bottom: 0;
 }
 /* Hamburger Menu */
 .hamburger {
